# cartridge-cli-extensions

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  cartridge-cli-extensions-scm-1.rockspec  cartridge-cli-extentions-scm-1.rockspec  deps.sh
.github/workflows/: push_rockspec.yaml  test_on_push.yaml
cartridge-cli-extensions/: admin.lua
cartridge-cli-extentions/: admin.lua
doc/: admin.md
test/: admin_test.lua
